[package]
name = "rust-fb-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs = "2.0.5"
serde = "1.0.147"
serde_json = "1.0"


hyper = "0.14"
tokio = { version = "1.21", features = ["full"] }
rustls = "0.20"
futures-util = "0.3"
webpki = "0.22"
# Add other required crates here